# Opencv-examples-Tracking

./: CMakeLists.txt  README.md
include/: webcam.hpp
scripts/: opencv_install.sh
src/: main.cpp  webcam.cpp
